# psychosis-bench

./: .env.example  .gitignore  BENCH_DOCUMENTATION.md  README.md  SIMPLIFICATION_PLAN.md  bench.py  custom_cases.json  pyproject.toml  test_basic_import.py
examples/: VISUALIZATION_HELPER.md  advanced.py  async_batch_demo.py  basic_usage.py  batch_experiment.py  demo_all_cases.py  quickstart.py  run_all_cases.py  visualize_results.py
psy_bench/: __init__.py  analysis.py  api.py  config.py
psy_bench/analysis/: __init__.py  exporters.py  reporter.py
psy_bench/cases/: __init__.py  archetypal.py  loader.py
psy_bench/config/: __init__.py  settings.py
psy_bench/core/: __init__.py  api_client.py  async_client.py  batch.py  cases.py  client.py  conversation_logger.py  experiment.py  models.py  runner.py  scoring.py
psy_bench/data/: test_cases.json
tests/: test_basic.py  test_integration.py
